-Cleaned up goofy characters

--- a/PandemobiumStockTrader/README
+++ b/PandemobiumStockTrader/README
@@ -13,12 +13,12 @@ RUNNING PANDEMOBIUM FROM AN ECLIPSE-BASED IDE
 First, download the Android SDK so you can run an Android emulator:
 Follow these instructions for installing and setting up the SDK on your
 Eclipse-based IDE http://developer.android.com/sdk/installing.html
-Next, import the PandemobiumStockTrader project into your favorite IDE’s
+Next, import the PandemobiumStockTrader project into your favorite IDE's
 workspace:
 Right click inside of the package explorer (usually on the left-hand 
-side of your screen), select import, choose “Exisiting Projects into 
-Workspace” inside the “General” folder as the import source, then select 
-the location of the “PandemobiumStockTrader” location.
+side of your screen), select import, choose "Exisiting Projects into 
+Workspace" inside the "General" folder as the import source, then select 
+the location of the "PandemobiumStockTrader" location.
 Finally, if you have set the window preferences to Android, you can now 
 select the PandemobiumStockTrader in the package explorer, and then 
 choose Run->Run As->Android Application.  This will start the SDK 
@@ -26,17 +26,17 @@ manager where you can choose a virtual device or create a new one.  This
 device will have the PandemobiumStockTrader app loaded into its app 
 menu.
 
-INSTALLING AND RUNNING PANDEMOBIUM USING ONLY IT’s .apk FILE
+INSTALLING AND RUNNING PANDEMOBIUM USING ONLY IT's .apk FILE
 
 First, download the Android SDK so you can run the Android emulator:
 http://developer.android.com/sdk/index.html
-Next, put the .apk file inside the “(sdk-location)\platform-tools\” 
+Next, put the .apk file inside the "(sdk-location)\platform-tools\" 
 folder. Using the SDK Manager, after installing the suggested packages, 
 create an Android device.  I recommend using the Google API platform 
 2.2, but every package should work with Pandemobium.
 Once your device is created, run it.
-Inside the command prompt, cd into “(sdk-location)\platform-tools\”.
-Now, run this command “adb –e install –r PandemobiumStockTrader.apk”.  
+Inside the command prompt, cd into "(sdk-location)\platform-tools\".
+Now, run this command "adb -e install -r PandemobiumStockTrader.apk".  
 If the PandemobiumStockTrader.apk file is in the platform-tools folder, 
 and your Android emulator is running, the Pandemobium app will be 
 installed into your device, and appear in the app section of your 
